syntax = "proto3";

option go_package = "/protobufs";

message Files {
    string user_id = 1;
    repeated string file_paths = 2;
}

message FileStructure {
    string file_path = 1;
}

service FileStructureService {
    rpc ExtractStructure(Files) returns (stream FileStructure);
}